2025-11-13T01:00:31Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19316936878 # 807
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-13
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 679 1073 / 682 1076
* notice: next accum: outdated-unq outdated-all / unq all: 679 1073 / 683 1077
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-11-12]

2025-11-12T01:00:06Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19282910936 # 806
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-12
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 677 1071 / 682 1076
* notice: next accum: outdated-unq outdated-all / unq all: 679 1073 / 682 1076
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-10-28] / []

2025-11-11T01:00:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19251308279 # 805
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-11
* notice: last 14d: unq all: 5 5
* notice: prev accum: outdated-unq outdated-all / unq all: 677 1071 / 681 1075
* notice: next accum: outdated-unq outdated-all / unq all: 677 1071 / 682 1076
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-11-10]

2025-11-10T01:02:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19217372228 # 804