@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-11-13T01:00:31Z",
-  "count_outdated" : 1073,
-  "uniques_outdated" : 679,
+  "timestamp" : "2025-11-14T01:00:16Z",
+  "count_outdated" : 1074,
+  "uniques_outdated" : 680,
   "count" : 1077,
   "uniques" : 683,
   "clones" : [
-    {
-      "timestamp": "2025-10-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-11-09T00:00:00Z",
       "count": 1,
